# team2FinalProject

./: BrakeEstimator.py  CMakeLists.txt  Environment_data.csv  Fricion_pkl.py  Friction_Coefficient.py  Friction_predict.py  Model.cpp  Model.h  README.md  alertdialog.cpp  alertdialog.h  alertdialog.ui  arduino.cpp  arduino.sql  b.py  cond.pkl  detect.cpp  drowsinessdetector.cpp  drowsinessdetector.h  eye.cpp  eye.h  eye.py  friction.pkl  locationservice.cpp  locationservice.h  main.cpp  mainview.cpp  mainview.h  mainwindow.cpp  mainwindow.h  openCVeye.cpp  predict.py  resources.qrc  road.pkl  train.py  졸음쉼터_좌표_결과.csv
BB_pj/: eye.cpp  eye.h  main.cpp  rasberry_db.cpp  raspberry_all.cpp  raspberry_db.cpp
MySQL/: bungbung_db.sql
NavigationApp/: CMakeLists.txt  Main.qml  drowsinessdetector.cpp  drowsinessdetector.h  main.cpp  qml.qrc
images/: Updated_Speed_Data__With_Emergency_Cases_.csv  desktop.ini
qml/: RoadSegment.qml  map.qml
